--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,8 +1,8 @@
 {
-    "builds": [
+    "rewrites": [
         {
-            "src": "./index.js",
-            "use": "@vercel/node"
+            "source": "/api/(.*)",
+            "destination": "/api"
         }
     ]
-  }
+}
