--- a/backend/package.json
+++ b/backend/package.json
@@ -19,9 +19,10 @@
     "express": "^4.18.2",
     "mongoose": "^7.4.1",
     "morgan": "^1.10.0",
+    "node-fetch": "^3.3.2",
     "socket.io": "^4.7.1",
-    "uuid": "^9.0.0",
-    "node-fetch": "^3.3.2"
+    "socket.io-client": "^4.7.1",
+    "uuid": "^9.0.0"
   },
   "engines": {
     "node": ">=16.0"
